// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Google maps renders a map with current location 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-google-maps-wrapper"
  >
    <GoogleMap
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      mapContainerClassName="widget-google-maps"
      onCenterChanged={[Function]}
      onLoad={[Function]}
      options={
        Object {
          "draggable": true,
          "fullscreenControl": false,
          "mapTypeControl": false,
          "maxZoom": 20,
          "minZoom": 1,
          "rotateControl": false,
          "scrollwheel": true,
          "streetViewControl": false,
          "styles": Array [
            Object {
              "elementType": "labels",
              "featureType": "poi",
              "stylers": Array [
                Object {
                  "visibility": "off",
                },
              ],
            },
          ],
          "zoomControl": true,
        }
      }
      zoom={10}
    >
      <GoogleMapsMarker
        key="marker_0"
        marker={
          Object {
            "latitude": 51.906688,
            "longitude": 4.48837,
            "url": "image:url",
          }
        }
        setSelectedMarker={[Function]}
      />
    </GoogleMap>
  </div>
</div>
`;

exports[`Google maps renders a map with markers 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50%",
    }
  }
>
  <div
    className="widget-google-maps-wrapper"
  >
    <GoogleMap
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      mapContainerClassName="widget-google-maps"
      onCenterChanged={[Function]}
      onLoad={[Function]}
      options={
        Object {
          "draggable": true,
          "fullscreenControl": false,
          "mapTypeControl": false,
          "maxZoom": 20,
          "minZoom": 1,
          "rotateControl": false,
          "scrollwheel": true,
          "streetViewControl": false,
          "styles": Array [
            Object {
              "elementType": "labels",
              "featureType": "poi",
              "stylers": Array [
                Object {
                  "visibility": "off",
                },
              ],
            },
          ],
          "zoomControl": true,
        }
      }
      zoom={10}
    >
      <GoogleMapsMarker
        key="marker_0"
        marker={
          Object {
            "latitude": 51.906688,
            "longitude": 4.48837,
            "title": "Mendix HQ",
            "url": "image:url",
          }
        }
        setSelectedMarker={[Function]}
      />
      <GoogleMapsMarker
        key="marker_1"
        marker={
          Object {
            "latitude": 51.922823,
            "longitude": 4.479632,
            "title": "Gementee Rotterdam",
            "url": "image:url",
          }
        }
        setSelectedMarker={[Function]}
      />
    </GoogleMap>
  </div>
</div>
`;

exports[`Google maps renders a map with percentage of parent units renders the structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75%",
      "width": "50%",
    }
  }
>
  <div
    className="widget-google-maps-wrapper"
  >
    <GoogleMap
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      mapContainerClassName="widget-google-maps"
      onCenterChanged={[Function]}
      onLoad={[Function]}
      options={
        Object {
          "draggable": true,
          "fullscreenControl": false,
          "mapTypeControl": false,
          "maxZoom": 20,
          "minZoom": 1,
          "rotateControl": false,
          "scrollwheel": true,
          "streetViewControl": false,
          "styles": Array [
            Object {
              "elementType": "labels",
              "featureType": "poi",
              "stylers": Array [
                Object {
                  "visibility": "off",
                },
              ],
            },
          ],
          "zoomControl": true,
        }
      }
      zoom={10}
    />
  </div>
</div>
`;

exports[`Google maps renders a map with percentage of width and height units renders the structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "auto",
      "paddingBottom": "37.5%",
      "width": "50%",
    }
  }
>
  <div
    className="widget-google-maps-wrapper"
  >
    <GoogleMap
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      mapContainerClassName="widget-google-maps"
      onCenterChanged={[Function]}
      onLoad={[Function]}
      options={
        Object {
          "draggable": true,
          "fullscreenControl": false,
          "mapTypeControl": false,
          "maxZoom": 20,
          "minZoom": 1,
          "rotateControl": false,
          "scrollwheel": true,
          "streetViewControl": false,
          "styles": Array [
            Object {
              "elementType": "labels",
              "featureType": "poi",
              "stylers": Array [
                Object {
                  "visibility": "off",
                },
              ],
            },
          ],
          "zoomControl": true,
        }
      }
      zoom={10}
    />
  </div>
</div>
`;

exports[`Google maps renders a map with pixels renders structure correctly 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "75px",
      "width": "50px",
    }
  }
>
  <div
    className="widget-google-maps-wrapper"
  >
    <GoogleMap
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      mapContainerClassName="widget-google-maps"
      onCenterChanged={[Function]}
      onLoad={[Function]}
      options={
        Object {
          "draggable": true,
          "fullscreenControl": false,
          "mapTypeControl": false,
          "maxZoom": 20,
          "minZoom": 1,
          "rotateControl": false,
          "scrollwheel": true,
          "streetViewControl": false,
          "styles": Array [
            Object {
              "elementType": "labels",
              "featureType": "poi",
              "stylers": Array [
                Object {
                  "visibility": "off",
                },
              ],
            },
          ],
          "zoomControl": true,
        }
      }
      zoom={10}
    />
  </div>
</div>
`;

exports[`Google maps renders a map with right structure 1`] = `
<div
  className="widget-maps"
  style={
    Object {
      "height": "37.5px",
      "width": "50px",
    }
  }
>
  <div
    className="widget-google-maps-wrapper"
  >
    <GoogleMap
      center={
        Object {
          "lat": 51.906688,
          "lng": 4.48837,
        }
      }
      mapContainerClassName="widget-google-maps"
      onCenterChanged={[Function]}
      onLoad={[Function]}
      options={
        Object {
          "draggable": true,
          "fullscreenControl": false,
          "mapTypeControl": false,
          "maxZoom": 20,
          "minZoom": 1,
          "rotateControl": false,
          "scrollwheel": true,
          "streetViewControl": false,
          "styles": Array [
            Object {
              "elementType": "labels",
              "featureType": "poi",
              "stylers": Array [
                Object {
                  "visibility": "off",
                },
              ],
            },
          ],
          "zoomControl": true,
        }
      }
      zoom={10}
    />
  </div>
</div>
`;
